# genetic-feature-selection

./: .gitignore  README.md  pyproject.toml
docs/: supporting_info.doc
experiments/: generate_figures.py  generate_tables.py  run_experiments.py  run_fashion_mnist.py  test_system.py
experiments/config/: base.yaml  cns.yaml  colon.yaml  fashion_mnist.yaml  leukemia.yaml  mll.yaml  ovarian.yaml
notebooks/: 01_exploratory_data_analysis.ipynb  02_data_preprocessing.ipynb  03_knn_experiments.ipynb  04_genetic_algorithm_experiments.ipynb  05_matrix_ga_experiments.ipynb  06_encoding_comparison.ipynb  07_project_flow.ipynb
src/: __init__.py
src/algorithms/: __init__.py  genetic_algorithm.py  knn_classifier.py  matrix_ga.py
src/data/: __init__.py  fashion_mnist_loader.py  loader.py  preprocessor.py
src/encoding/: __init__.py  adaptive_encoding.py  base_encoding.py  binary_encoding.py  decimal_encoding.py  gaussian_encoding.py  real_encoding.py
src/fitness/: __init__.py  accuracy_fitness.py
src/utils/: __init__.py  metrics.py  visualization.py
